--- a/code/game.html
+++ b/code/game.html
@@ -27,60 +27,141 @@ var Paddle = function () {
     var o = {
         image: image,
         x: 100,
-        y: 200,
+        y: 250,
         speed: 5,
     }
+    var paddle = o
     o.moveLeft = function () {
         paddle.x -= paddle.speed
     }
     o.moveRight = function () {
         paddle.x += paddle.speed
     }
+    o.collide = function (ball) {
+        if (ball.y + ball.image.height > o.y){
+            if (ball.x > o.x && ball.x < o.x + o.image.width) {
+                log("相撞")
+                return true
+            }
+        }
+        return false
+    }
     return o
 }
 
+var Ball = function () {
+    var image = imageFromPath("ball.png")
+    var o = {
+        image: image,
+        x: 100,
+        y: 200,
+        speedX: 10,
+        speedY: 10,
+        fired: false,
+    }
+    o.fire = function () {
+        o.fired = true
+    }
+    o.move = function () {
+        if (o.fired) {
+            // log('move')
+            if (o.x < 0 || o.x > 400) {
+                o.speedX = -o.speedX
+            }
+            if (o.y < 0 || o.x > 300) {
+                o.speedX = -o.speedX
+            }
+            //move
+            o.x += o.speedX
+            o.y += o.speedY
+        }
+    }
+    return o
+}
 
-var __main = function () {
+var GuaGame = function () {
+    var g = {
+            actions: {},
+            keydowns: {},
+    }
     var canvas = document.querySelector("#id-canvas")
     var context = canvas.getContext("2d")
 
-    var paddle = Paddle()
-    var leftDown = false
-    var rightDown = false
+    //drawImage
+    g.drawImage = function (guaImage) {
+        g.context.drawImage(guaImage.image, guaImage.x, guaImage.y)
+    }
+
+    g.canvas = canvas
+    g.context = context
+    // events
     window.addEventListener('keydown', function (event) {
-        var k = event.key
-        if (k == 'a') {
-            leftDown = true
-        }else if (k == 'd') {
-            rightDown = true
-        }
+        g.keydowns[event.key] = true
     })
-
     window.addEventListener('keyup', function (event) {
-        var k = event.key
-        if (k == 'a') {
-            leftDown = false
-        }else if (k == 'd') {
-            rightDown = false
-        }
+        g.keydowns[event.key] = false
     })
 
+    g.registerAction = function (key, callback) {
+        g.actions[key] = callback
+    }
 
-    setInterval(function(){
-        // update x //
-        if (leftDown) {
-            paddle.moveLeft()
-        } else if(rightDown) {
-            paddle.moveRight()
+    // timer
+    setInterval(function () {
+        var actions = Object.keys(g.actions)
+        for (var i = 0; i < actions.length; i++) {
+            var key = actions[i]
+            if (g.keydowns[key]){
+                //如果按键被按下，调用注册的action
+                g.actions[key]()
+            }
         }
-        // clamp x
+        //update
+        g.update()
 
-        // draw
+        // clear
         context.clearRect(0, 0, canvas.width,canvas.height);
-        context.drawImage(paddle.image, paddle.x, paddle.y)
+
+        //draw
+        g.draw()
+
     },1000/30)
 
+    return g
 }
+
+var __main = function () {
+    var game = GuaGame()
+
+    var paddle = Paddle()
+    
+    var ball = Ball()
+
+    game.registerAction('a', function () {
+            paddle.moveLeft()
+    })
+    game.registerAction('d', function () {
+            paddle.moveRight()
+    })
+    game.registerAction('f', function () {
+            ball.fire()
+    })
+
+
+    game.update = function () {
+        ball.move()
+        //判断碰撞
+        if(paddle.collide(ball)){
+            ball.speedY *= -1
+        }
+    }
+
+    game.draw = function(){
+        game.drawImage(paddle)
+        game.drawImage(ball)
+    }
+}
+
 
 __main()
 </script>
