--- a/code/game.html
+++ b/code/game.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>game 1</title>
         <style media="screen">
             canvas {
                 border: 1px black solid;
@@ -11,36 +11,34 @@
     </head>
     <body>
         <canvas id="id-canvas" width="400" height="300"></canvas>
-
-
 <script>
 var log = console.log.bind(console)
 
-var imageFromPath = function (path) {
+var imageFromPath = function(path) {
     var img = new Image()
-    img.src = "paddle.png"
+    img.src = path
     return img
 }
 
-var Paddle = function () {
-    var image = imageFromPath("paddle.png")
+var Paddle = function() {
+    var image = imageFromPath('paddle.png')
     var o = {
         image: image,
         x: 100,
         y: 250,
-        speed: 5,
+        speed: 15,
     }
     var paddle = o
-    o.moveLeft = function () {
+    o.moveLeft = function() {
         paddle.x -= paddle.speed
     }
-    o.moveRight = function () {
+    o.moveRight = function() {
         paddle.x += paddle.speed
     }
-    o.collide = function (ball) {
-        if (ball.y + ball.image.height > o.y){
+    o.collide = function(ball) {
+        if (ball.y + ball.image.height > o.y) {
             if (ball.x > o.x && ball.x < o.x + o.image.width) {
-                log("相撞")
+                log('相撞')
                 return true
             }
         }
@@ -49,8 +47,8 @@ var Paddle = function () {
     return o
 }
 
-var Ball = function () {
-    var image = imageFromPath("ball.png")
+var Ball = function() {
+    var image = imageFromPath('ball.png')
     var o = {
         image: image,
         x: 100,
@@ -59,19 +57,19 @@ var Ball = function () {
         speedY: 10,
         fired: false,
     }
-    o.fire = function () {
+    o.fire = function() {
         o.fired = true
     }
-    o.move = function () {
+    o.move = function() {
         if (o.fired) {
             // log('move')
             if (o.x < 0 || o.x > 400) {
                 o.speedX = -o.speedX
             }
-            if (o.y < 0 || o.x > 300) {
-                o.speedX = -o.speedX
+            if (o.y < 0 || o.y > 300) {
+                o.speedY = -o.speedY
             }
-            //move
+            // move
             o.x += o.speedX
             o.y += o.speedY
         }
@@ -79,89 +77,83 @@ var Ball = function () {
     return o
 }
 
-var GuaGame = function () {
+// 瓜
+var GuaGame = function() {
     var g = {
-            actions: {},
-            keydowns: {},
+        actions: {},
+        keydowns: {},
     }
-    var canvas = document.querySelector("#id-canvas")
-    var context = canvas.getContext("2d")
-
-    //drawImage
-    g.drawImage = function (guaImage) {
-        g.context.drawImage(guaImage.image, guaImage.x, guaImage.y)
-    }
-
+    var canvas = document.querySelector('#id-canvas')
+    var context = canvas.getContext('2d')
     g.canvas = canvas
     g.context = context
+    // draw
+    g.drawImage = function(guaImage) {
+        g.context.drawImage(guaImage.image, guaImage.x, guaImage.y)
+    }
     // events
-    window.addEventListener('keydown', function (event) {
+    window.addEventListener('keydown', function(event){
         g.keydowns[event.key] = true
     })
-    window.addEventListener('keyup', function (event) {
+    window.addEventListener('keyup', function(event){
         g.keydowns[event.key] = false
     })
-
-    g.registerAction = function (key, callback) {
+    //
+    g.registerAction = function(key, callback) {
         g.actions[key] = callback
     }
-
     // timer
-    setInterval(function () {
+    setInterval(function(){
+        // events
         var actions = Object.keys(g.actions)
         for (var i = 0; i < actions.length; i++) {
             var key = actions[i]
-            if (g.keydowns[key]){
-                //如果按键被按下，调用注册的action
+            if(g.keydowns[key]) {
+                // 如果按键被按下, 调用注册的 action
                 g.actions[key]()
             }
         }
-        //update
+        // update
         g.update()
-
         // clear
-        context.clearRect(0, 0, canvas.width,canvas.height);
-
-        //draw
+        context.clearRect(0, 0, canvas.width, canvas.height)
+        // draw
         g.draw()
-
-    },1000/30)
+    }, 1000/30)
 
     return g
 }
 
-var __main = function () {
+var __main = function() {
     var game = GuaGame()
 
     var paddle = Paddle()
-    
     var ball = Ball()
 
-    game.registerAction('a', function () {
-            paddle.moveLeft()
+    game.registerAction('a', function(){
+        paddle.moveLeft()
     })
-    game.registerAction('d', function () {
-            paddle.moveRight()
+    game.registerAction('d', function(){
+        paddle.moveRight()
     })
-    game.registerAction('f', function () {
-            ball.fire()
+    game.registerAction('f', function(){
+        ball.fire()
     })
 
-
-    game.update = function () {
+    game.update = function() {
         ball.move()
-        //判断碰撞
-        if(paddle.collide(ball)){
+        // 判断相撞
+        if (paddle.collide(ball)) {
+            // 这里应该调用一个 ball.反弹() 来实现
             ball.speedY *= -1
         }
     }
-
-    game.draw = function(){
+    game.draw = function() {
+        // draw
         game.drawImage(paddle)
         game.drawImage(ball)
     }
 }
-
 
 __main()
 </script>
