--- a/code/day5/game.html
+++ b/code/day5/game.html
@@ -24,6 +24,7 @@
     <body>
         <canvas id="id-canvas" width="400" height="300"></canvas>
         <hr>
+        难度调节：
         <input id=id-input-speed type="range" value="1">
         <div class="">
             <textarea id="id-text-log" rows="20" cols="50"></textarea>
