--- a/code/day5/game.html
+++ b/code/day5/game.html
@@ -18,7 +18,8 @@
         <script src='scene/end/scene_end.js'></script>
         <script src='scene/title/scene_title.js'></script>
         <script src='scene/win/scene_win.js'></script>
-
+        <script src='scene/editor/scene_editor.js'></script>
+        <script src='customLevel.js'></script>        
         <script src='level.js'></script>
     </head>
     <body>
