--- a/code/day5/game.html
+++ b/code/day5/game.html
@@ -16,6 +16,7 @@
         <script src='scene/main/ball.js'></script>
         <script src='scene/main/block.js'></script>
         <script src='scene/main/scene.js'></script>
+        <script src='scene/main/starsky.js'></script>
         <script src='scene/end/scene_end.js'></script>
         <script src='scene/title/scene_title.js'></script>
         <script src='scene/win/scene_win.js'></script>
